# zhuigejiba

./: .env.example  .gitignore  README.md  package-lock.json  package.json  start_all.bat
.cache/: geocode_cache.json
backend/: list_routes.py  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  fortune.py  trace.py
backend/app/services/: __init__.py  fortune_agents.py  fortune_aggregator.py  fortune_service.py  relationship_agents.py  relationship_service.py  trace_agents.py  trace_service.py
backend/app/utils/: __init__.py  fortune_utils.py  geocoder.py  llm_client.py  logger.py  retry.py
backend/tests/: test_aggregator_fallback.py  test_supplement_logic.py
frontend/: DESIGN_SPEC.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: fortune.js  index.js  trace.js
frontend/src/components/: CanvasMap.vue  FateRadar.vue  FictionalMap.vue  GraphVisualizer.vue  InteriorMap.vue  ProgressBar.vue  RealMap.vue  Skeleton.vue  StarryBackground.vue  Toast.vue
frontend/src/router/: index.js
frontend/src/utils/: errorHandler.js  toast.js  validators.js
frontend/src/views/: FortuneView.vue  Home.vue  TraceView.vue
tests/: test_hierarchy.py  test_layout.py
